outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_10-32-20/evaluations/problem_eval8299169972349471737_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring with dynamic entropy thresholds, incorporating a novel momentum-aware centrality metric and a probabilistic selection mechanism that balances immediate proximity, long-term connectivity, and path consistency through entropy-sensitive weight adjustments and a reinforced learning-like reward system.}
                                                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring with dynamic entropy thresholds, incorporating a novel momentum-aware centrality metric and a probabilistic selection mechanism that balances immediate proximity, long-term connectivity, and path consistency through entropy-sensitive weight adjustments and a reinforced learning-like reward system.}
                                                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'
